--- a/assignments/assignment-38/flexbox.css
+++ b/assignments/assignment-38/flexbox.css
@@ -5,4 +5,65 @@ body {
 }
 .flexbox {
   display: flex;
+  flex-wrap:wrap;
+}
+
+h3{
+  color:white;
+}
+
+.main h3{
+  color:black;
+}
+
+.header{
+  background-color:orange;
+  text-align:center;
+  flex:1 1 100%;
+  padding:20px;
+}
+
+.navigation{
+  background-color:green;
+  text-align:center;
+  flex:1 1 200px;
+  padding:20px;
+}
+
+.main{
+  text-align: center;
+  flex:20 1 300px;
+  display:flex;
+  flex-direction:column;
+  padding:30px;
+}
+
+.main h3{
+  margin-top:0;
+  margin-bottom:20px;
+}
+
+.article h3{
+  margin-bottom:10px;
+}
+
+.article{
+  border:4px solid black;
+  padding:10px;
+}
+
+.section h3{
+  margin:20px;
+}
+.section{
+  border:4px dotted black;
+  margin:5px;
+}
+
+.footer{
+  background-color:grey;
+  text-align:center;
+  flex:1 1 100%;
+  /*margin-top:10px;*/
+  padding:20px;
 }
